// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marginBlockEnd renders 0 1`] = `
Array [
  .c0 {
  margin-block-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockEnd renders function 1`] = `
Array [
  .c0 {
  margin-block-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: has;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockEnd renders invalid theme path 1`] = `
Array [
  .c0 {
  margin-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockEnd renders negative number 1`] = `
Array [
  .c0 {
  margin-block-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockEnd renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    margin-block-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    margin-block-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-block-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block-end: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-block-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block-end: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockEnd renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    margin-block-end: July;
  }
}

@media April {
  .c0 {
    margin-block-end: August;
  }
}

@media January {
  .c0 {
    margin-block-end: September;
  }
}

@media April {
  .c0 {
    margin-block-end: November;
  }
}

@media June {
  .c0 {
    margin-block-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    margin-block-end: July;
  }
}

@media April {
  .c0 {
    margin-block-end: August;
  }
}

@media January {
  .c0 {
    margin-block-end: September;
  }
}

@media April {
  .c0 {
    margin-block-end: November;
  }
}

@media June {
  .c0 {
    margin-block-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-block-end: January;
  }
}

@media April {
  .c0 {
    margin-block-end: December;
  }
}

@media January {
  .c0 {
    margin-block-end: April;
  }
}

@media April {
  .c0 {
    margin-block-end: May;
  }
}

@media June {
  .c0 {
    margin-block-end: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-block-end: January;
  }
}

@media April {
  .c0 {
    margin-block-end: December;
  }
}

@media January {
  .c0 {
    margin-block-end: April;
  }
}

@media April {
  .c0 {
    margin-block-end: May;
  }
}

@media June {
  .c0 {
    margin-block-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockEnd renders postitive number 1`] = `
Array [
  .c0 {
  margin-block-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockEnd renders string 1`] = `
Array [
  .c0 {
  margin-block-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: June;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlockEnd renders valid theme path 1`] = `
Array [
  .c0 {
  margin-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
